Changes to mobile version to accomodate for IOS webkit issues (Scrolling gallery converted to fixed one on mobile) part 2

--- a/Pages/SRC/srcstyles.css
+++ b/Pages/SRC/srcstyles.css
@@ -589,101 +589,3 @@ p.title2 {
   }
 }
 
-@media (pointer: coarse) and (not (all) and (-webkit-min-device-pixel-ratio:0)) {
-  .media-scroller {
-    --_spacer: 15px;
-    display: grid;
-    gap: var(--_spacer);
-    grid-auto-flow: row;
-    grid-auto-columns: 18%;
-  
-    padding: 0 var(--_spacer) var(--_spacer);
-  
-    overflow-x: auto;
-    overscroll-behavior-inline: contain;
-    background-color: #04020e00;
-  }
-  
-  .media-scroller--with-groups {
-    grid-auto-columns: 80%;
-  }
-  
-  .media-group {
-    display: grid;
-    gap: var(--_spacer);
-    grid-auto-flow: row;
-  }
-  
-  .media-element {
-    display: grid;
-  
-    gap: 10px;
-    background: #222222;
-    border-radius: 3px;
-    box-shadow: var(--shadow-2);
-    height: 350px;
-    transition: 0.4s ease-in-out;
-    cursor: pointer;
-  }
-  
-  .media-element:hover {
-    display: grid;
-    background: #cd152b;
-    border-radius: 3px;
-    box-shadow: var(--shadow-2);
-    height: 350px;
-  }
-  
-  .media-element > img {
-    inline-size: 100%;
-    height: 250px;
-    object-fit: cover;
-    object-position: center;
-    float: bottom;
-    border-radius: 3px;
-    transition: 0.25s ease-out;
-  }
-  
-  .media-element:hover img {
-    inline-size: 100%;
-    height: 280px;
-    object-fit: cover;
-    object-position: center;
-    float: bottom;
-    border-radius: 3px;
-  }
-  
-  h4 {
-    font-family: "Satoshi";
-    font-weight: 900;
-    font-size: 7rem;
-    padding-top: 10rem;
-    padding-bottom: 3.5rem;
-    padding-left: 15px;
-    mix-blend-mode: exclusion;
-  }
-  
-  p.title {
-    font-family: "Aileron";
-    font-size: 2rem;
-    font-weight: 600;
-    padding-left: 10px;
-  }
-  
-  p.title2 {
-    font-family: "Aileron";
-    font-size: 1.3rem;
-    font-weight: 300;
-    padding-left: 10px;
-    padding-bottom: 10px;
-  }
-  
-  .snaps-inline {
-    scroll-snap-type: inline mandatory;
-    scroll-padding-inline: var(--_spacer, 1rem);
-  }
-  
-  .snaps-inline > * {
-    scroll-snap-align: start;
-  }
-}
